<?xml version="1.0"?>
<package format="2">
  <name>map_align</name>
  <version>0.0.0</version>
  <description>The map_align package</description>
  <maintainer email="sagarkhadse@todo.todo">sagarkhadse</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  
</package>
